--- a/src/queue/views/html/online-player-list.css
+++ b/src/queue/views/html/online-player-list.css
@@ -1,19 +1,21 @@
+@reference '../../../html/styles/main.css';
+
 .online-player-list {
   flex: 1 1 0;
   list-style-type: none;
 
   li {
     &:nth-child(odd) {
-      background-color: theme(colors.abru.dark.6);
+      background-color: var(--color-abru-dark-6);
     }
 
     &:nth-child(even) {
-      background-color: theme(colors.abru.light.5);
+      background-color: var(--color-abru-light-5);
     }
   }
 
   a {
-    color: theme(colors.abru.light.75);
+    color: var(--color-abru-light-75);
     border-radius: 2px;
     padding: 4px 8px;
     font-weight: 300;
@@ -21,7 +23,7 @@
     display: inline-block;
     width: 100%;
 
-    @media screen(lg) {
+    @media (width >= theme(--breakpoint-lg)) {
       text-align: start;
     }
 
