--- a/src/html/styles/button.css
+++ b/src/html/styles/button.css
@@ -17,22 +17,22 @@
 
     text-transform: uppercase;
 
-    color: theme(colors.ash);
+    color: var(--color-ash);
 
-    background-color: theme(colors.abru.light.15);
+    background-color: var(--color-abru-light-15);
 
     &:hover {
-      background-color: darken(theme(colors.abru.light.15), 5%);
+      background-color: color-mix(in hsl, var(--color-abru-light-15), black 5%);
     }
 
     &:disabled,
     a&:not([href]) {
-      background-color: theme(colors.abru.light.35);
-      color: theme(colors.abru.light.60);
+      background-color: var(--color-abru-light-35);
+      color: var(--color-abru-light-60);
 
       &:hover {
-        background-color: theme(colors.abru.light.35);
-        color: theme(colors.abru.light.60);
+        background-color: var(--color-abru-light-35);
+        color: var(--color-abru-light-60);
       }
     }
 
@@ -43,56 +43,56 @@
     }
 
     &--accent {
-      background-color: theme(colors.accent.DEFAULT);
+      background-color: var(--color-accent);
 
       &:hover {
-        background-color: darken(theme(colors.accent.DEFAULT), 10%);
+        background-color: color-mix(in hsl, var(--color-accent), black 10%);
       }
 
       &:disabled,
       a&:not([href]) {
-        background-color: theme(colors.accent.DEFAULT);
-        color: theme(colors.ash);
+        background-color: var(--color-accent);
+        color: var(--color-ash);
 
         &:hover {
-          background-color: theme(colors.accent.DEFAULT);
-          color: theme(colors.ash);
+          background-color: var(--color-accent);
+          color: var(--color-ash);
         }
       }
     }
 
     &--alert {
-      background-color: theme(colors.abru.DEFAULT);
-      color: theme(colors.alert);
+      background-color: var(--color-abru);
+      color: var(--color-alert);
 
       &:hover {
-        background-color: lighten(theme(colors.abru.DEFAULT), 4%);
+        background-color: color-mix(in hsl, var(--color-abru), white 4%);
       }
     }
 
     &--darker {
-      background-color: theme(colors.abru.dark.25);
+      background-color: var(--color-abru-dark-25);
       &:hover {
-        background-color: darken(theme(colors.abru.dark.25), 5%);
+        background-color: color-mix(in hsl, var(--color-abru-dark-25), black 5%);
       }
     }
 
     &--lighter {
-      background-color: theme(colors.abru.light.85);
-      color: theme(colors.abru.light.3);
+      background-color: var(--color-abru-light-85);
+      color: var(--color-abru-light-3);
 
       &:hover {
-        background-color: darken(theme(colors.abru.light.85), 5%);
+        background-color: color-mix(in hsl, var(--color-abru-light-85), black 5%);
       }
 
       &:disabled,
       a&:not([href]) {
-        background-color: theme(colors.abru.light.85);
-        color: theme(colors.abru.light.60);
+        background-color: var(--color-abru-light-85);
+        color: var(--color-abru-light-60);
 
         &:hover {
-          background-color: theme(colors.abru.light.85);
-          color: theme(colors.abru.light.60);
+          background-color: var(--color-abru-light-85);
+          color: var(--color-abru-light-60);
         }
       }
     }
