--- a/src/html/styles/flash-messages.css
+++ b/src/html/styles/flash-messages.css
@@ -25,7 +25,7 @@
         padding: 12px 24px;
         font-weight: 700;
         font-size: 16px;
-        color: theme(colors.ash);
+        color: var(--color-ash);
       }
 
       progress[value] {
