--- a/src/html/styles/snackbar.css
+++ b/src/html/styles/snackbar.css
@@ -6,10 +6,10 @@
     transform: translate(-50%, 0);
 
     border-radius: 8px;
-    background-color: theme(colors.abru.dark.29);
+    background-color: var(--color-abru-dark-29);
     box-shadow: 0px 29px 37px 3px rgba(0, 0, 0, 0.4);
 
-    color: theme(colors.abru.light.70);
+    color: var(--color-abru-light-70);
     font-size: 24px;
     font-weight: 500;
 
