--- a/src/html/styles/switch.css
+++ b/src/html/styles/switch.css
@@ -18,7 +18,7 @@
       left: 0;
       right: 0;
       bottom: 0;
-      background-color: theme(colors.abru.light.20);
+      background-color: var(--color-abru-light-20);
       transition: 0.4s;
       border-radius: 34px;
 
@@ -29,7 +29,7 @@
         width: 18px;
         left: 3px;
         top: 3px;
-        background-color: theme(colors.abru.dark.25);
+        background-color: var(--color-abru-dark-25);
         transition: 0.4s;
         border-radius: 50%;
         z-index: 20;
@@ -37,7 +37,7 @@
     }
 
     input:checked + .slider {
-      background-color: theme(colors.accent.DEFAULT);
+      background-color: var(--color-accent);
     }
 
     input:checked + .slider:before {
