--- a/src/queue/views/html/accept-rules-dialog.css
+++ b/src/queue/views/html/accept-rules-dialog.css
@@ -1,5 +1,5 @@
 .accept-rules-dialog {
-  background-color: theme(colors.abru.dark.29);
+  background-color: var(--color-abru-dark-29);
   max-width: 1018px;
   border-radius: 8px;
   padding: 24px 32px;
@@ -9,7 +9,7 @@
     height: auto;
     max-height: calc(100vh - 64px);
 
-    @media screen(lg) {
+    @media (width >= theme(--breakpoint-lg)) {
       max-height: calc(100vh - 300px);
     }
   }
