--- a/src/html/styles/button.css
+++ b/src/html/styles/button.css
@@ -96,5 +96,13 @@
         }
       }
     }
+
+    &.compact {
+      padding: 8px;
+
+      span {
+        display: none;
+      }
+    }
   }
 }
