--- a/src/html/styles/game-class-skill-input.css
+++ b/src/html/styles/game-class-skill-input.css
@@ -8,13 +8,12 @@
     align-items: center;
 
     img {
-      margin-left: 16px;
+      margin-left: 8px;
     }
 
     input {
       text-align: center;
-      width: auto;
-      min-width: 20px;
+      width: 48px;
       background: transparent;
       border: none;
     }
